# Flat-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  FlatEngine.sln  FlatEngine.vcxproj  FlatEngine.vcxproj.filters  README.md  feinternal.feconfig  imgui.ini  runRelease.bat  vsbuilddebug.bat  vsbuildrelease.bat
FlatEditor/: FlatEditor.aps  FlatEditor.vcxproj  FlatEditor.vcxproj.filters  feinternal.feconfig  imgui.ini
FlatEditor/resources/shaders/: ssao_geometry.fs  ssao_lighting.fs
FlatEditor/src/: FlatEditorApp.cpp  editorlayer.cpp  editorlayer.h
FlatEditor/src/panels/: consolePanel.cpp  consolePanel.h  contentPanel.cpp  contentPanel.h  panelSettings.cpp  panelSettings.h  sceneHPanel.cpp  sceneHPanel.h  viewportPanel.cpp  viewportPanel.h
FlatEditor/src/utils/: config.cpp  config.h
FlatEditor/x64/Debug/: FlatEditor.exe.recipe  vc142.idb
FlatEditor/x64/Debug/FlatEditor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlatEditor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
resources/objects/patrick/: patrick.mtl
resources/objects/patrick_animated/: patrick_animated.mtl
resources/scenes/: level1.scene  minecraft.scene
resources/shaders/: ssao_geometry.fs
src/: FlatEngine.h  level.h  main.cpp  sandbox.cpp  sandbox.h
src/audio/: audio.cpp
src/core/: EntryPoint.h  FlatEngine.h  application.cpp  application.h  camera.h  components.h  core.cpp  core.h  draw.cpp  draw.h  editor.cpp  editor.h  entitity.cpp  entity.h  feMath.cpp  feMath.h  framebuffer.h  gbuffer.h  input.cpp  input.h  keycodes.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  log.h  model.h  renderer.cpp  renderer.h  resources.cpp  resources.h  scene.cpp  scene.h  sceneSerializer.cpp  sceneSerializer.h  scriptableEntity.h  shader.h  ui.cpp
src/core/panels/: sceneHPanel.cpp
src/core/ui/: ui.cpp  ui.h  uiutils.cpp  uiutils.h
src/core/ui/panels/: sceneHPanel.cpp  viewportPanel.cpp  viewportPanel.h
src/physics/: physics.cpp  physics.h
src/render/: assimp_glm_helpers.h  draw.cpp  draw.h  framebuffer.h  gbuffer.h  lighting.cpp  lighting.h  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.h  ssao.cpp  ssao.h  texture.cpp  texture.h  window.cpp  window.h
src/render/animation/: animation.h  animator.h  animdata.h  bone.h
src/ui/: imguilayer.cpp  imguilayer.h  ui.cpp  ui.h  uiutils.cpp
src/ui/panels/: consolePanel.cpp  consolePanel.h  sceneHPanel.cpp  viewportPanel.cpp  viewportPanel.h
src/utils/: config.cpp  config.h  feMath.cpp  feMath.h  filesystem.h  log.cpp  log.h  rootpath.h  timestep.h  uiutils.cpp  uiutils.h  utility.h
